--- a/styles/sass/partials/_results.scss
+++ b/styles/sass/partials/_results.scss
@@ -1,20 +1,25 @@
 .results {
     display:flex;
     flex-direction: row;
+    justify-content: center;
     margin: 0 auto;
     margin-top: 20px;
 }
 .resultsA {
+    display: inline-block;
     background-color: white;
     border-radius: 20px 0 0 20px;
     text-align: center;
+    min-width: 40%;
    
 }
 
 .resultsB {
+    display: inline-block;
     background-color:white;
     border-radius: 0 20px 20px 0 ;
     text-align: center;
+    min-width: 40%;
     
 }
 .resultsA .countryName{
@@ -29,14 +34,23 @@
     text-align: center;
 }
 
-.resultsA .indicatorData {
+.resultsA .indicatorData{
     font-size: 0.75rem;
     text-align: left;
-    
+    padding-left: 10px;
+    li:nth-child(even) {
+        text-align: right;
+        padding-right: 10px;
+    }
 }
 
-.resultsB .indicatorData {
+.resultsB .indicatorData{
     font-size: 0.75rem;
-    text-align: left;
-  
+    text-align: right;
+    padding-right: 10px;
+    li:nth-child(even) {
+        text-align: left;
+        padding-left: 10px;
+    }
 }
+
