--- a/styles/style.css
+++ b/styles/style.css
@@ -295,20 +295,27 @@ button {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0 auto;
   margin-top: 20px;
 }
 
 .resultsA {
+  display: inline-block;
   background-color: white;
   border-radius: 20px 0 0 20px;
   text-align: center;
+  min-width: 40%;
 }
 
 .resultsB {
+  display: inline-block;
   background-color: white;
   border-radius: 0 20px 20px 0;
   text-align: center;
+  min-width: 40%;
 }
 
 .resultsA .countryName {
@@ -326,9 +333,19 @@ button {
 .resultsA .indicatorData {
   font-size: 0.75rem;
   text-align: left;
+  padding-left: 10px;
+}
+.resultsA .indicatorData li:nth-child(even) {
+  text-align: right;
+  padding-right: 10px;
 }
 
 .resultsB .indicatorData {
   font-size: 0.75rem;
+  text-align: right;
+  padding-right: 10px;
+}
+.resultsB .indicatorData li:nth-child(even) {
   text-align: left;
+  padding-left: 10px;
 }
