--- a/styles/sass/partials/_results.scss
+++ b/styles/sass/partials/_results.scss
@@ -1,44 +1,48 @@
+
 .results {
     display:flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     margin: 0 auto;
     margin-top: 20px;
-}
-.resultsA {
-    display: inline-block;
-    background-color: white;
-    border-radius: 20px 0 0 20px;
-    text-align: center;
-    min-width: 40%;
-   
-}
+    }
+    .resultsA {
+        display: inline-block;
+        background-color: white;
+        border-radius: 20px 0 0 20px;
+        text-align: center;
+        min-width: 50%;
+        .countryName {
+            font-size: 1.5rem;
+            font-weight:600;
+            text-align: center;
+        }
+    }
+    .resultsB {
+        display: inline-block;
+        background-color:white;
+        border-radius: 0 20px 20px 0 ;
+        text-align: center;
+        min-width: 50%;
+        .countryName {
+            font-size: 1.5rem;
+            font-weight:600;
+            text-align: center;
+            
+        }
+    }
 
-.resultsB {
-    display: inline-block;
-    background-color:white;
-    border-radius: 0 20px 20px 0 ;
-    text-align: center;
-    min-width: 40%;
-    
-}
-.resultsA .countryName{
-    font-size: 1.5rem;
-    font-weight:600;
-    text-align: center;
-}
 
-.resultsB .countryName {
-    font-size: 1.5rem;
-    font-weight:600;
-    text-align: center;
-}
+
 
 .resultsA .indicatorData{
     font-size: 0.75rem;
+    font-weight: 400;
     text-align: left;
     padding-left: 10px;
     li:nth-child(even) {
+        font-weight: 600;
         text-align: right;
         padding-right: 10px;
     }
@@ -46,11 +50,21 @@
 
 .resultsB .indicatorData{
     font-size: 0.75rem;
+    font-weight: 400;
     text-align: right;
     padding-right: 10px;
     li:nth-child(even) {
+        font-weight: 600;
         text-align: left;
         padding-left: 10px;
     }
 }
 
+// media queries... 
+
+@media screen and (max-width: 883px) {
+    .resultsA,
+    .resultsB {
+        border-radius: 20px;
+    }
+  }
