--- a/styles/style.css
+++ b/styles/style.css
@@ -298,6 +298,8 @@ button {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0 auto;
   margin-top: 20px;
 }
@@ -307,7 +309,12 @@ button {
   background-color: white;
   border-radius: 20px 0 0 20px;
   text-align: center;
-  min-width: 40%;
+  min-width: 50%;
+}
+.resultsA .countryName {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
 }
 
 .resultsB {
@@ -315,15 +322,8 @@ button {
   background-color: white;
   border-radius: 0 20px 20px 0;
   text-align: center;
-  min-width: 40%;
+  min-width: 50%;
 }
-
-.resultsA .countryName {
-  font-size: 1.5rem;
-  font-weight: 600;
-  text-align: center;
-}
-
 .resultsB .countryName {
   font-size: 1.5rem;
   font-weight: 600;
@@ -332,20 +332,31 @@ button {
 
 .resultsA .indicatorData {
   font-size: 0.75rem;
+  font-weight: 400;
   text-align: left;
   padding-left: 10px;
 }
 .resultsA .indicatorData li:nth-child(even) {
+  font-weight: 600;
   text-align: right;
   padding-right: 10px;
 }
 
 .resultsB .indicatorData {
   font-size: 0.75rem;
+  font-weight: 400;
   text-align: right;
   padding-right: 10px;
 }
 .resultsB .indicatorData li:nth-child(even) {
+  font-weight: 600;
   text-align: left;
   padding-left: 10px;
+}
+
+@media screen and (max-width: 883px) {
+  .resultsA,
+.resultsB {
+    border-radius: 20px;
+  }
 }
