--- a/styles/sass/partials/_results.scss
+++ b/styles/sass/partials/_results.scss
@@ -34,14 +34,16 @@
     }
 
 
-
-
 .resultsA .indicatorData{
     font-size: 0.75rem;
     font-weight: 400;
     text-align: left;
     padding-left: 10px;
+    ul {
+        z-index: 100;
+    }
     li:nth-child(even) {
+        font-size: 1.15rem;
         font-weight: 600;
         text-align: right;
         padding-right: 10px;
@@ -54,6 +56,7 @@
     text-align: right;
     padding-right: 10px;
     li:nth-child(even) {
+        font-size: 1.15rem;
         font-weight: 600;
         text-align: left;
         padding-left: 10px;
