--- a/styles/style.css
+++ b/styles/style.css
@@ -336,7 +336,11 @@ button {
   text-align: left;
   padding-left: 10px;
 }
+.resultsA .indicatorData ul {
+  z-index: 100;
+}
 .resultsA .indicatorData li:nth-child(even) {
+  font-size: 1.15rem;
   font-weight: 600;
   text-align: right;
   padding-right: 10px;
@@ -349,6 +353,7 @@ button {
   padding-right: 10px;
 }
 .resultsB .indicatorData li:nth-child(even) {
+  font-size: 1.15rem;
   font-weight: 600;
   text-align: left;
   padding-left: 10px;
