--- a/styles/style.css
+++ b/styles/style.css
@@ -330,6 +330,12 @@ button {
   text-align: center;
 }
 
+.flag1 img,
+.flag2 img {
+  height: clamp(200px, 230px, 260px);
+  width: clamp(290px, 320px, 350px);
+}
+
 .resultsA .indicatorData {
   font-size: 0.75rem;
   font-weight: 400;
