--- a/styles/sass/partials/_results.scss
+++ b/styles/sass/partials/_results.scss
@@ -33,10 +33,10 @@
         }
     }
 
-.flag1 img,
-.flag2 img {
-    height: clamp(200px, 230px, 260px);
-    width: clamp(290px, 320px, 350px);
+.flagA img,
+.flagB img {
+    height: 266px;
+    width: 435px;
 }
 
 .resultsA .indicatorData{
