--- a/styles/style.css
+++ b/styles/style.css
@@ -245,8 +245,8 @@ body {
   width: 100vw;
   height: 100vh;
   opacity: 1;
-  background: -webkit-gradient(linear, left bottom, left top, from(orange), to(red));
-  background: linear-gradient(360deg, orange, red);
+  background: -webkit-gradient(linear, left bottom, left top, from(#e0eaf2), to(#93b4d0));
+  background: linear-gradient(360deg, #e0eaf2, #93b4d0);
   -webkit-transition: opacity 1000ms ease-out;
   transition: opacity 1000ms ease-out;
 }
@@ -283,10 +283,26 @@ ul {
 }
 .selectCountries select {
   width: 45%;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 25px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.selectCountries select:focus {
+  outline: none;
 }
 .selectCountries input[type=submit] {
-  padding: 5px 20px;
+  padding: 5px 50px;
   margin-top: 20px;
+  background-color: #68bc64;
+  border: solid 2px #68bc64;
+  border-radius: 25px;
+}
+.selectCountries input[type=submit]:hover, .selectCountries input[type=submit]:focus {
+  color: #ffffff;
+  background-color: #345e32;
 }
 
 .results {
