--- a/styles/sass/partials/_globalStyles.scss
+++ b/styles/sass/partials/_globalStyles.scss
@@ -19,7 +19,7 @@ body {
     width: 100vw;
     height: 100vh;
     opacity: 1;
-    background: linear-gradient(360deg, orange, red);
+    background: linear-gradient(360deg, #e0eaf2, #93b4d0);
     transition: opacity 1000ms ease-out;
 }
 
