--- a/styles/sass/partials/_results.scss
+++ b/styles/sass/partials/_results.scss
@@ -46,8 +46,9 @@
     position: relative;
     top: 7px;
     img {
-        height: 292px;
-        width: 555px;;
+        // height: 292px;
+        // width: 555px;;
+        width: 100%
     }
 }
 
@@ -55,7 +56,7 @@
     font-size: 1rem;
     font-weight: 600;
     text-align: center;
-    background-color: white;
+    background-color: transparent;
     padding: 4%;
     li:nth-child(odd) {
         padding: 5px 0;
@@ -64,6 +65,7 @@
         background-color: white;
     }
     li:nth-child(even) {
+        line-height: 1.35rem;
         font-size: 1.15rem;
         font-weight: 400;
         border-radius: 50%;
@@ -78,16 +80,16 @@
     font-size: 1rem;
     font-weight: 600;
     text-align: center;
-    background-color: white;
+    background-color: transparent;
     padding: 4%;
     li:nth-child(odd) {
-        display: invisible;
         padding: 5px 0;
         border: black solid 2px;
         border-radius: 20px;
         background-color: white;
     }
     li:nth-child(even) {
+        line-height: 1.35rem;
         font-size: 1.15rem;
         font-weight: 400;
         border-radius: 50%;
