--- a/styles/style.css
+++ b/styles/style.css
@@ -363,15 +363,14 @@ ul {
 }
 .flagA img,
 .flagB img {
-  height: 292px;
-  width: 555px;
+  width: 100%;
 }
 
 .resultsA .indicatorData {
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
-  background-color: white;
+  background-color: transparent;
   padding: 4%;
 }
 .resultsA .indicatorData li:nth-child(odd) {
@@ -381,6 +380,7 @@ ul {
   background-color: white;
 }
 .resultsA .indicatorData li:nth-child(even) {
+  line-height: 1.35rem;
   font-size: 1.15rem;
   font-weight: 400;
   border-radius: 50%;
@@ -393,17 +393,17 @@ ul {
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
-  background-color: white;
+  background-color: transparent;
   padding: 4%;
 }
 .resultsB .indicatorData li:nth-child(odd) {
-  display: invisible;
   padding: 5px 0;
   border: black solid 2px;
   border-radius: 20px;
   background-color: white;
 }
 .resultsB .indicatorData li:nth-child(even) {
+  line-height: 1.35rem;
   font-size: 1.15rem;
   font-weight: 400;
   border-radius: 50%;
@@ -415,111 +415,5 @@ ul {
 @media screen and (max-width: 1170px) {
   .resultsA {
     margin-bottom: 20px;
-  }
-}
-@media screen and (max-width: 600px) {
-  .results {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin: 0 auto;
-    margin-top: 20px;
-  }
-
-  .resultsA {
-    display: inline-block;
-    background-color: transparent;
-    text-align: center;
-  }
-  .resultsA .countryName {
-    background-color: white;
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-align: center;
-  }
-  .resultsA .countryName p {
-    border: black 2px solid;
-  }
-
-  .resultsB {
-    display: inline-block;
-    background-color: transparent;
-    text-align: center;
-  }
-  .resultsB .countryName {
-    background-color: white;
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-align: center;
-  }
-  .resultsB .countryName p {
-    border-top: black 2px solid;
-    border-bottom: black 2px solid;
-    border-right: black 2px solid;
-  }
-
-  .flagA,
-.flagB {
-    position: relative;
-    top: 7px;
-  }
-  .flagA img,
-.flagB img {
-    height: 140px;
-    width: 304px;
-  }
-
-  .resultsA .indicatorData {
-    font-size: 1rem;
-    font-weight: 600;
-    text-align: center;
-    background-color: white;
-    padding: 4%;
-  }
-  .resultsA .indicatorData li:nth-child(odd) {
-    padding: 5px 0;
-    border: black solid 2px;
-    border-radius: 20px;
-    background-color: white;
-  }
-  .resultsA .indicatorData li:nth-child(even) {
-    font-size: 1.15rem;
-    font-weight: 400;
-    border-radius: 50%;
-    text-align: center;
-    margin: 1% 30%;
-    padding: 13px 0 8px 0;
-  }
-
-  .resultsB .indicatorData {
-    font-size: 1rem;
-    font-weight: 600;
-    text-align: center;
-    background-color: white;
-    padding: 4%;
-  }
-  .resultsB .indicatorData li:nth-child(odd) {
-    display: invisible;
-    padding: 5px 0;
-    border: black solid 2px;
-    border-radius: 20px;
-    background-color: white;
-  }
-  .resultsB .indicatorData li:nth-child(even) {
-    font-size: 1.15rem;
-    font-weight: 400;
-    border-radius: 50%;
-    text-align: center;
-    margin: 1% 30%;
-    padding: 13px 0 8px 0;
   }
 }
