--- a/styles/sass/partials/_results.scss
+++ b/styles/sass/partials/_results.scss
@@ -12,7 +12,7 @@
     background-color: transparent;
 
     text-align: center;
-    // min-width: 50%;
+    margin-right: 10px;
     .countryName {
         background-color: white;
         font-size: 1.5rem;
@@ -27,28 +27,27 @@
 .resultsB {
     display: inline-block;
     background-color: transparent;
-
     text-align: center;
-    // min-width: 50%;
+    margin-left: 10px;
     .countryName {
         background-color: white;
         font-size: 1.5rem;
         font-weight:600;
         text-align: center;
         p {
-            border-top: black 2px solid;
-            border-bottom: black 2px solid;
-            border-right: black 2px solid;
+            border: black 2px solid;
+           
             padding: 10px;
         }
     }
 }
 .flagA,
 .flagB {
-    position: relative;
-    top: 7px;
+    // position: relative;
+    // top: 7px;
+    padding-bottom: 12px;
     img {
-        height: 277px;
+        height: 291px;
         width: 100%;
     }
 }
