--- a/styles/style.css
+++ b/styles/style.css
@@ -256,6 +256,12 @@ h1 {
   margin-top: 100px;
 }
 
+h2 {
+  text-align: center;
+  font-size: 90%;
+  margin-bottom: 40px;
+}
+
 label {
   margin-left: 22%;
 }
