--- a/styles/sass/partials/_form.scss
+++ b/styles/sass/partials/_form.scss
@@ -35,7 +35,7 @@ ul {
     }
     input[type="submit"] {
         padding: 5px 75px;
-        margin-top: 20px;
+        margin: 20px 0;
         background-color: #68bc64;
         border: solid 2px #68bc64;
         border-radius: 25px;
