--- a/styles/sass/partials/_globalStyles.scss
+++ b/styles/sass/partials/_globalStyles.scss
@@ -17,20 +17,29 @@ html{
 
 body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     opacity: 1;
     background: linear-gradient(360deg, #e0eaf2, #93b4d0);
     transition: opacity 1000ms ease-out;
 }
 
-h1 {
+h1, h2, h3 {
     text-align: center;
+}
+
+h2, h3 {
+    font-size: 90%;
+}
+
+h1 {
     margin-top: 100px;
 }
 
 h2 {
-    text-align: center;
-    font-size: 90%;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+}
+
+h3 {
+    margin-top: 20px;
 }
 
