--- a/styles/style.css
+++ b/styles/style.css
@@ -243,7 +243,7 @@ html {
 
 body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   opacity: 1;
   background: -webkit-gradient(linear, left bottom, left top, from(#e0eaf2), to(#93b4d0));
   background: linear-gradient(360deg, #e0eaf2, #93b4d0);
@@ -251,15 +251,24 @@ body {
   transition: opacity 1000ms ease-out;
 }
 
-h1 {
+h1, h2, h3 {
   text-align: center;
+}
+
+h2, h3 {
+  font-size: 90%;
+}
+
+h1 {
   margin-top: 100px;
 }
 
 h2 {
-  text-align: center;
-  font-size: 90%;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+}
+
+h3 {
+  margin-top: 20px;
 }
 
 label {
@@ -309,7 +318,7 @@ ul {
 }
 .selectCountries input[type=submit] {
   padding: 5px 75px;
-  margin-top: 20px;
+  margin: 20px 0;
   background-color: #68bc64;
   border: solid 2px #68bc64;
   border-radius: 25px;
