added created by line and cleaned up styles for the header

--- a/styles/sass/partials/_globalStyles.scss
+++ b/styles/sass/partials/_globalStyles.scss
@@ -23,16 +23,12 @@ body {
     transition: opacity 1000ms ease-out;
 }
 
-h1, h2, h3 {
-    text-align: center;
-}
-
 h2, h3 {
     font-size: 90%;
 }
 
 h1 {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 h2 {
@@ -43,3 +39,15 @@ h3 {
     margin-top: 20px;
 }
 
+header {
+    text-align: center;
+    p {
+        margin-top: 5px;
+        font-size: 80%;
+        a {
+            color: black;
+            text-decoration: none;
+        }
+
+    }
+}
