--- a/styles/sass/partials/_globalStyles.scss
+++ b/styles/sass/partials/_globalStyles.scss
@@ -13,14 +13,16 @@ html{
     margin: 0 auto;
 }
 
-
-
 body {
     width: 100vw;
     min-height: 100vh;
     opacity: 1;
     background: linear-gradient(360deg, #e0eaf2, #93b4d0);
     transition: opacity 1000ms ease-out;
+}
+
+ul {
+    list-style: none;
 }
 
 h2, h3 {
