--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,5 @@
 @import "./partials/setup";
+@import "./partials/typography";
 @import "./partials/globalStyles";
 @import "./partials/form";
 @import "./partials/results";
