--- a/styles/style.css
+++ b/styles/style.css
@@ -226,6 +226,17 @@ html {
   overflow: hidden;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: normal;
+}
+
+h1 {
+  font-size: 76px;
+  text-transform: uppercase;
+  -webkit-text-stroke: 2px white;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -249,6 +260,10 @@ body {
   background: linear-gradient(360deg, #e0eaf2, #93b4d0);
   -webkit-transition: opacity 1000ms ease-out;
   transition: opacity 1000ms ease-out;
+}
+
+ul {
+  list-style: none;
 }
 
 h2, h3 {
