--- a/styles/style.css
+++ b/styles/style.css
@@ -237,6 +237,10 @@ h1 {
   -webkit-text-stroke: 2px white;
 }
 
+.smallCopy {
+  font-size: 75%;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -282,16 +286,18 @@ h3 {
   margin-top: 20px;
 }
 
-header {
+p {
   text-align: center;
-}
-header p {
   margin-top: 5px;
   font-size: 80%;
 }
-header p a {
+p a {
   color: black;
   text-decoration: none;
+}
+
+header {
+  text-align: center;
 }
 
 .selectCountries {
