--- a/styles/style.css
+++ b/styles/style.css
@@ -26,8 +26,7 @@ figure {
 }
 
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   height: 0;
   overflow: visible;
 }
@@ -140,8 +139,7 @@ fieldset {
 }
 
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   color: inherit;
   display: table;
   max-width: 100%;
@@ -159,8 +157,7 @@ textarea {
 }
 
 [type=checkbox], [type=radio] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
 }
 
@@ -203,13 +200,11 @@ template {
 }
 
 html {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 *, *:before, *:after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 .sr-only {
@@ -260,9 +255,7 @@ body {
   width: 100vw;
   min-height: 100vh;
   opacity: 1;
-  background: -webkit-gradient(linear, left bottom, left top, from(#e0eaf2), to(#93b4d0));
   background: linear-gradient(360deg, #e0eaf2, #93b4d0);
-  -webkit-transition: opacity 1000ms ease-out;
   transition: opacity 1000ms ease-out;
 }
 
@@ -301,18 +294,10 @@ header {
 }
 
 .selectCountries {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   width: 700px;
   margin: 0 auto;
   position: relative;
@@ -351,18 +336,10 @@ header {
 }
 
 .results {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   margin: 0 auto;
   margin-top: 20px;
 }
@@ -460,6 +437,11 @@ header {
 @media screen and (max-width: 1170px) {
   .resultsA {
     margin-bottom: 20px;
+    margin-right: 0px;
+  }
+
+  .resultsB {
+    margin-left: 0px;
   }
 
   .countryName p {
@@ -487,5 +469,10 @@ header {
 
   .resultsA .countryName p {
     padding: 5px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .wrapper {
+    width: 100%;
   }
 }
